--- a/templates/base.html
+++ b/templates/base.html
@@ -147,6 +147,12 @@
               <a class="nav-link" href="/market_news">Market News</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/register">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/sector_news">Sector News</a>
             </li>
             <li class="nav-item">
